Attempting to fix the misaligned nav menu

--- a/css/master.css
+++ b/css/master.css
@@ -54,7 +54,7 @@ a:active {
 }
 
 .nav {
-  float: right;
+  /* float: right; */
   text-align: center;
   margin-right: 200px;
   margin-top: 10px;
